--- a/index.html
+++ b/index.html
@@ -6,12 +6,23 @@
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <!-- My stylesheet -->
+        <link rel="stylesheet" href="TEK.css">
         <!-- jQuery library -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <!-- Latest compiled JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </head>
     <body>
-
+        <div class="fixed-top">
+            <div class="row bg-dark">
+                <div class="col-md-6">
+                    <h1>Terrorelhárítási Központ</h1>
+                </div>
+                <div class="col-md-6">
+                    <h1 class="text-left">Counter Terrorism Centre</h1>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
