--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
     </head>
     <body>
         <div class="fixed-top">
-            <div class="row bg-dark">
-                <div class="col-md-6">
-                    <h1>Terrorelhárítási Központ</h1>
+            <div class="row bg-black TitleText">
+                <div class="col-xs-4 col-sm-4 col-md-5">
+                    <h2>TERRORELHÁRÍTÁSI KÖZPONT</h2>
                 </div>
-                <div class="col-md-6">
-                    <h1 class="text-left">Counter Terrorism Centre</h1>
+                <div class="col-xs-4 col-sm-4 col-md-2 text-center">
+                    <img src="Logo-Dark.jpg" alt="Logo Dark" width="100" height="100">
+                </div>
+                <div class="col-xs-4 col-sm-4 col-md-5">
+                    <h2 class="text-right">COUNTER TERRORISM CENTER</h2>
                 </div>
             </div>
         </div>
