--- a/index.html
+++ b/index.html
@@ -17,13 +17,20 @@
         <div class="fixed-top">
             <div class="row bg-black TitleText">
                 <div class="col-xs-4 col-sm-4 col-md-5">
+                    <br>
                     <h2>TERRORELHÁRÍTÁSI KÖZPONT</h2>
+                    <br>
                 </div>
                 <div class="col-xs-4 col-sm-4 col-md-2 text-center">
-                    <img src="Logo-Dark.jpg" alt="Logo Dark" width="100" height="100">
+                    <img src="Logo-Dark.jpg" alt="Logo Dark" width="100" height="100" usemap="#logo-map">
+                    <map name="logo-map">
+                        <area shape="circle" coords="50,50,50" alt="TEK" href="http://tek.gov.hu/">
+                    </map>
                 </div>
                 <div class="col-xs-4 col-sm-4 col-md-5">
+                    <br>
                     <h2 class="text-right">COUNTER TERRORISM CENTER</h2>
+                    <br>
                 </div>
             </div>
         </div>
