--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="row bg-black TitleText">
                 <div class="col-xs-4 col-sm-4 col-md-5">
                     <br>
-                    <h2>&nbsp&nbsp<b>TERRORELHÁRÍTÁSI KÖZPONT</b></h2>
+                    <h2>&nbsp;&nbsp;<b>TERRORELHÁRÍTÁSI KÖZPONT</b></h2>
                     <br>
                 </div>
                 <div class="col-xs-4 col-sm-4 col-md-2 text-center">
@@ -29,8 +29,42 @@
                 </div>
                 <div class="col-xs-4 col-sm-4 col-md-5">
                     <br>
-                    <h2 class="text-right"><b>COUNTER TERRORISM CENTER</b>&nbsp&nbsp</h2>
+                    <h2 class="text-right"><b>COUNTER TERRORISM CENTER</b>&nbsp;&nbsp;</h2>
                     <br>
+                </div>
+            </div>
+            <div class="row bg-yellow">
+                <div class="col-xs-6 col-sm-6 col-md-6">
+                    <ul class="nav-left-ul">
+                        <li class="nav-left-li">
+                            <a href="" target="_self" class="nav-left-li-a"><b>Szervezet</b></a>
+                        </li>
+                        <li class="nav-left-li">
+                            <a href="" target="_self" class="nav-left-li-a"><b>Humánigazgatás</b></a>
+                        </li>
+                        <li class="nav-left-li">
+                            <a href="" target="_self" class="nav-left-li-a"><b>Gazdálkodás</b></a>
+                        </li>
+                        <li class="nav-left-li">
+                            <a href="" target="_self" class="nav-left-li-a"><b>Aktuális</b></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-xs-6 col-sm-6 col-md-6">
+                    <ul class="nav-right-ul">
+                        <li class="nav-right-li">
+                            <a href="" target="_self" class="nav-right-li-a"><b>Szakmai folyóirat</b></a>
+                        </li>
+                        <li class="nav-right-li">
+                            <a href="" target="_self" class="nav-right-li-a"><b>E-Ügyintézés</b></a>
+                        </li>
+                        <li class="nav-right-li">
+                            <a href="" target="_self" class="nav-right-li-a"><b>Bejelntések</b></a>
+                        </li>
+                        <li class="nav-right-li">
+                            <a href="" target="_self" class="nav-right-li-a"><b>Kapcsolat</b></a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
