stuff i can't remember

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="row bg-black TitleText">
                 <div class="col-xs-4 col-sm-4 col-md-5">
                     <br>
-                    <h2>&nbsp;&nbsp;<b>TERRORELHÁRÍTÁSI KÖZPONT</b></h2>
+                    <h2><b>TERRORELHÁRÍTÁSI KÖZPONT</b></h2>
                     <br>
                 </div>
                 <div class="col-xs-4 col-sm-4 col-md-2 text-center">
@@ -29,7 +29,7 @@
                 </div>
                 <div class="col-xs-4 col-sm-4 col-md-5">
                     <br>
-                    <h2 class="text-right"><b>COUNTER TERRORISM CENTER</b>&nbsp;&nbsp;</h2>
+                    <h2 class="text-right"><b>COUNTER TERRORISM CENTER</b></h2>
                     <br>
                 </div>
             </div>
