--- a/index.html
+++ b/index.html
@@ -68,5 +68,8 @@
                 </div>
             </div>
         </div>
+        <div class="bg-image">
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        </div>
     </body>
 </html>
