--- a/index.html
+++ b/index.html
@@ -69,8 +69,21 @@
             </div>
         </nav>
         <div class="bg-image padding-nav">
-            <br><br><br>
             <img src="kommando_2.jpg" alt="Kommando 2" class="image-responsive image-formatting">
+            <br>
+            <div class="info">
+                <h3><b>Terrorelhárítási Központ</b></h3>
+                <p>Székhelye: 1101 Budapest, Zách u. 4.</p>
+                <p>Postai címe: 1903 Budapest, Pf.: 314</p>
+                <p>Központi telefonszáma: +36(1)265-6200</p>
+                <p>TEK zöldszám: +36(80)286-954</p>
+                <p>Központi faxszáma: +36(1)265-6209</p>
+                <p>Web-címe: http://tek.gov.hu</p>
+                <p>E-mail címe: <a href="mailto:tek@tek.gov.hu">tek@tek.gov.hu</a></p>
+                <p>Sajtókapcsolat: <a href="mailto:sajto@tek.gov.hu">sajto@tek.gov.hu</a></p>
+                <!-- Make the next link better as well -->
+                <a href="pdf/Jasenszky_Nándor.pdf" target="_blank">(Társadalmi Kapcsolatok Osztálya)</a>
+            </div>
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         </div>
     </body>
