added images and other touchups

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="hu">
     <head>
         <meta charset="UTF-8">
+        <meta name="keywords" content="Terrorelhárítási Központ, Swat, Terror, Police">
         <title>Terrorelhárítási Központ</title>
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <!-- Latest compiled and minified CSS -->
@@ -69,20 +70,53 @@
             </div>
         </nav>
         <div class="bg-image padding-nav">
-            <img src="kommando_2.jpg" alt="Kommando 2" class="image-responsive image-formatting">
-            <br>
-            <div class="info">
-                <h3><b>Terrorelhárítási Központ</b></h3>
-                <p>Székhelye: 1101 Budapest, Zách u. 4.</p>
-                <p>Postai címe: 1903 Budapest, Pf.: 314</p>
-                <p>Központi telefonszáma: +36(1)265-6200</p>
-                <p>TEK zöldszám: +36(80)286-954</p>
-                <p>Központi faxszáma: +36(1)265-6209</p>
-                <p>Web-címe: http://tek.gov.hu</p>
-                <p>E-mail címe: <a href="mailto:tek@tek.gov.hu">tek@tek.gov.hu</a></p>
-                <p>Sajtókapcsolat: <a href="mailto:sajto@tek.gov.hu">sajto@tek.gov.hu</a></p>
-                <!-- Make the next link better as well -->
-                <a href="pdf/Jasenszky_Nándor.pdf" target="_blank">(Társadalmi Kapcsolatok Osztálya)</a>
+            <div class="row">
+                <div class="col-xs-6 col-sm-6 col-md-6">>
+                    <img src="kommando_2.jpg" alt="Kommando 2" class="image-responsive image-formatting">
+                    <br>
+                    <div class="info">
+                        <h3><b>Terrorelhárítási Központ</b></h3>
+                        <p>Székhelye: 1101 Budapest, Zách u. 4.</p>
+                        <p>Postai címe: 1903 Budapest, Pf.: 314</p>
+                        <p>Központi telefonszáma: +36(1)265-6200</p>
+                        <p>TEK zöldszám: +36(80)286-954</p>
+                        <p>Központi faxszáma: +36(1)265-6209</p>
+                        <p>Web-címe: http://tek.gov.hu</p>
+                        <p>E-mail címe: <a href="mailto:tek@tek.gov.hu">tek@tek.gov.hu</a></p>
+                        <p>Sajtókapcsolat: <a href="mailto:sajto@tek.gov.hu">sajto@tek.gov.hu</a></p>
+                        <!-- Make the next link better as well -->
+                        <a href="pdf/Jasenszky_Nándor.pdf" target="_blank">(Társadalmi Kapcsolatok Osztálya)</a>
+                    </div>
+                </div>
+                <div class="col-xs-6 col-sm-6 col-md-6 image-top">
+                    <div align="right" id="belugyialapokdiv">
+                        <a href="belugyialapok.html">
+                            <img src="BA_BBA logo.jpg" class="image-right">
+                        </a>
+                        <br>
+                        <br>
+                    </div>
+                    <div align="right">
+                        <a href="eu.html">
+                            <img src="euflag.jpg" class="image-right" height="150px">
+                        </a>
+                        <a href="kehop.html">
+                            <img src="szechenyi_2020_logo_fekvo_color_gradient_CMYK.jpg" class="image-right" >
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-12">
+                    <br>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-12">
+                    <p>&copy; 2010-2024 TEK</p>
+                </div>
             </div>
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         </div>
