added more stuff - in the middle of other stuff

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
         <!-- My stylesheet -->
         <link rel="stylesheet" href="TEK.css">
         <!-- jQuery library -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js" defer></script>
         <!-- Latest compiled JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" defer></script>
+        <!-- My JavaSCript-->
+        <script src="index.js" defer></script>
     </head>
     <body>
         <nav class="navbar-fixed-top">
@@ -108,17 +110,47 @@
             </div>
             <hr>
             <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-12">
-                    <br>
+                <div class="col-xs-12 col-sm-12 col-md-12 text-center">
+                    <table>
+                        <tr>
+                            <td>
+                                <a href="http://www.kormany.hu/hu/belugyminiszterium" target="_blank">
+                                    
+                                </a>
+                            </td>
+                        </tr>
+                    </table>
+                    <!--
+                    <table border="0" cellspacing="1" cellpadding="1">
+                        <tr>
+                            <td>
+                                <a href="http://www.kormany.hu/hu/belugyminiszterium" target="_blank">
+                                    <img src="bm_bw.jpg" border="0" onmouseover="this.src='bm.jpg';" onmouseout="this.src='bm_bw.jpg';">
+                                </a>
+                            </td>
+                            <td>
+                                <a href="http://www.nvsz.hu" target="_blank"><img src="nvsz_bw.jpg" border="0" onmouseover="this.src='nvsz.jpg';" onmouseout="this.src='nvsz_bw.jpg';">
+                                </a>
+                            </td>
+                            <td>
+                                <a href="http://www.police.hu" target="_blank"><img src="police_0_bw.jpg" border="0" onmouseover="this.src='police_0.jpg';" onmouseout="this.src='police_0_bw.jpg';">
+                                </a>
+                            </td>
+                            <td>
+                                <a href="https://belugyiszemle.hu/" target="_blank"><img src="BelugyiSzemleLogoBW.jpg" border="0" onmouseover="this.src='BelugyiSzemleLogoBlue.jpg';" onmouseout="this.src='BelugyiSzemleLogoBW.jpg';">
+                                </a>
+                            </td>
+                        </tr>
+                    </table>
+                -->
                 </div>
             </div>
             <hr>
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12">
-                    <p>&copy; 2010-2024 TEK</p>
+                    <p class="text-center">&copy; 2010-<span id="year"></span> TEK</p>
                 </div>
             </div>
-            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         </div>
     </body>
 </html>
