images work really well - very pleased with myself

--- a/index.html
+++ b/index.html
@@ -111,38 +111,30 @@
             <hr>
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 text-center">
-                    <table>
+                    <table class="img-table">
                         <tr>
                             <td>
                                 <a href="http://www.kormany.hu/hu/belugyminiszterium" target="_blank">
-                                    
+                                    <img src="bm_bw.jpg" data-hover="bm.jpg" alt="BM">
+                                </a>
+                            </td>
+                            <td>
+                                <a href="http://www.nvsz.hu" target="_blank">
+                                    <img src="nvsz_bw.jpg" data-hover="nvsz.jpg" alt="NVSZ">
+                                </a>
+                            </td>
+                            <td>
+                                <a href="http://www.police.hu" target="_blank">
+                                    <img src="police_0_bw.jpg" data-hover="police_0.jpg" alt="Police">
+                                </a>
+                            </td>
+                            <td>
+                                <a href="https://belugyiszemle.hu/" target="_blank">
+                                    <img src="BelugyiSzemleLogoBW.jpg" data-hover="BelugyiSzemleLogoBlue.jpg" alt="Belugyi Szemle">
                                 </a>
                             </td>
                         </tr>
                     </table>
-                    <!--
-                    <table border="0" cellspacing="1" cellpadding="1">
-                        <tr>
-                            <td>
-                                <a href="http://www.kormany.hu/hu/belugyminiszterium" target="_blank">
-                                    <img src="bm_bw.jpg" border="0" onmouseover="this.src='bm.jpg';" onmouseout="this.src='bm_bw.jpg';">
-                                </a>
-                            </td>
-                            <td>
-                                <a href="http://www.nvsz.hu" target="_blank"><img src="nvsz_bw.jpg" border="0" onmouseover="this.src='nvsz.jpg';" onmouseout="this.src='nvsz_bw.jpg';">
-                                </a>
-                            </td>
-                            <td>
-                                <a href="http://www.police.hu" target="_blank"><img src="police_0_bw.jpg" border="0" onmouseover="this.src='police_0.jpg';" onmouseout="this.src='police_0_bw.jpg';">
-                                </a>
-                            </td>
-                            <td>
-                                <a href="https://belugyiszemle.hu/" target="_blank"><img src="BelugyiSzemleLogoBW.jpg" border="0" onmouseover="this.src='BelugyiSzemleLogoBlue.jpg';" onmouseout="this.src='BelugyiSzemleLogoBW.jpg';">
-                                </a>
-                            </td>
-                        </tr>
-                    </table>
-                -->
                 </div>
             </div>
             <hr>
