added nav bar html pages and links to them

--- a/index.html
+++ b/index.html
@@ -40,32 +40,32 @@
                 <div class="col-xs-6 col-sm-6 col-md-6">
                     <ul class="nav-left-ul">
                         <li class="nav-left-li">
-                            <a href="" target="_self" class="nav-left-li-a"><b>Szervezet</b></a>
+                            <a href="Szervezet.html" target="_self" class="nav-left-li-a"><b>Szervezet</b></a>
                         </li>
                         <li class="nav-left-li">
-                            <a href="" target="_self" class="nav-left-li-a"><b>Humánigazgatás</b></a>
+                            <a href="Humánigazgatás.html" target="_self" class="nav-left-li-a"><b>Humánigazgatás</b></a>
                         </li>
                         <li class="nav-left-li">
-                            <a href="" target="_self" class="nav-left-li-a"><b>Gazdálkodás</b></a>
+                            <a href="Gazdálkodás.html" target="_self" class="nav-left-li-a"><b>Gazdálkodás</b></a>
                         </li>
                         <li class="nav-left-li">
-                            <a href="" target="_self" class="nav-left-li-a"><b>Aktuális</b></a>
+                            <a href="Aktulis.html" target="_self" class="nav-left-li-a"><b>Aktuális</b></a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-6">
                     <ul class="nav-right-ul">
                         <li class="nav-right-li">
-                            <a href="" target="_self" class="nav-right-li-a"><b>Szakmai folyóirat</b></a>
+                            <a href="Szakmai_Folyóirat.html" target="_self" class="nav-right-li-a"><b>Szakmai folyóirat</b></a>
                         </li>
                         <li class="nav-right-li">
-                            <a href="" target="_self" class="nav-right-li-a"><b>E-Ügyintézés</b></a>
+                            <a href="E-Ügyintézés.html" target="_self" class="nav-right-li-a"><b>E-Ügyintézés</b></a>
                         </li>
                         <li class="nav-right-li">
-                            <a href="" target="_self" class="nav-right-li-a"><b>Bejelntések</b></a>
+                            <a href="Bejelntések.html" target="_self" class="nav-right-li-a"><b>Bejelntések</b></a>
                         </li>
                         <li class="nav-right-li">
-                            <a href="" target="_self" class="nav-right-li-a"><b>Kapcsolat</b></a>
+                            <a href="Kapcolat.html" target="_self" class="nav-right-li-a"><b>Kapcsolat</b></a>
                         </li>
                     </ul>
                 </div>
