--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body>
         <nav class="navbar-fixed-top">
             <div class="row bg-black TitleText">
-                <div class="col-xs-4 col-sm-4 col-md-5">
+                <div class="col-xs-4 col-sm-4 col-md-5 padding-nav-bar-left">
                     <br>
                     <h2><b>TERRORELHÁRÍTÁSI KÖZPONT</b></h2>
                     <br>
@@ -30,7 +30,7 @@
                         <area shape="circle" coords="50,50,50" alt="TEK" href="http://tek.gov.hu/">
                     </map>
                 </div>
-                <div class="col-xs-4 col-sm-4 col-md-5">
+                <div class="col-xs-4 col-sm-4 col-md-5 padding-nav-bar-right">
                     <br>
                     <h2 class="text-right"><b>COUNTER TERRORISM CENTER</b></h2>
                     <br>
