--- a/Szervezet.html
+++ b/Szervezet.html
@@ -73,7 +73,15 @@
             <h3><b>A TEK irányítása, tevékenysége</b></h3>
             <hr>
             <div class="main-text">
-                <p><b>Irányító szerv&#58;</b></p>
+                <p>
+                    <b>Irányító szerv&#58;</b><br><br>
+                    <b>Belügyminisztérium</b><br>
+                    Székhelye&#58; 1051 Budapest, József Attila u. 2-4.<br>
+                    Postai címe&#58; 1903 Budapest Pf.: 314.<br>
+                    Telefon&#58; +36-1-441-10-00<br>
+                    Telefax&#58; +36-1-441-14-37<br>
+                    Honlap&#58; www.bm.gov.hu&#59; www.kormany.hu/belugyminiszterium
+                </p>
             </div>
         </div>
     </body>
