edited some stuff

--- a/Szervezet.html
+++ b/Szervezet.html
@@ -77,10 +77,18 @@
                     <b>Irányító szerv&#58;</b><br><br>
                     <b>Belügyminisztérium</b><br>
                     Székhelye&#58; 1051 Budapest, József Attila u. 2-4.<br>
-                    Postai címe&#58; 1903 Budapest Pf.: 314.<br>
+                    Postai címe&#58; 1903 Budapest Pf.&#58; 314.<br>
                     Telefon&#58; +36-1-441-10-00<br>
                     Telefax&#58; +36-1-441-14-37<br>
-                    Honlap&#58; www.bm.gov.hu&#59; www.kormany.hu/belugyminiszterium
+                    Honlap&#58; www.bm.gov.hu&#59; www.kormany.hu/belugyminiszterium<br>
+                    E-mail&#58; ugyfelszolgalat@bm.gov.hu
+                </p>
+                <br><br>
+                <p>
+                    <b>
+                        <u class="nagyob-text">TEVÉKENYSÉG, MŰKÖDÉS&#58;</u><br><br>
+                        A TEK-re vonatkozó jogszabályok
+                    </b>
                 </p>
             </div>
         </div>
