--- a/Szervezet.html
+++ b/Szervezet.html
@@ -69,7 +69,7 @@
                 </div>
             </div>
         </nav>
-        <div class="bg-image padding-nav-big">
+        <div class="bg-image padding-nav-nagy">
             <h3><b>A TEK irányítása, tevékenysége</b></h3>
             <hr>
             <div class="main-text">
@@ -81,14 +81,23 @@
                     Telefon&#58; +36-1-441-10-00<br>
                     Telefax&#58; +36-1-441-14-37<br>
                     Honlap&#58; www.bm.gov.hu&#59; www.kormany.hu/belugyminiszterium<br>
-                    E-mail&#58; ugyfelszolgalat@bm.gov.hu
-                </p>
-                <br><br>
-                <p>
+                    E-mail&#58; ugyfelszolgalat@bm.gov.hu<br><br>
                     <b>
                         <u class="nagyob-text">TEVÉKENYSÉG, MŰKÖDÉS&#58;</u><br><br>
-                        A TEK-re vonatkozó jogszabályok
+                        A TEK-re vonatkozó jogszabályok<br><br>
+                        A TEK feladatköre&#58;<br>
                     </b>
+                    A TEK feladat- és hatáskörét érintő jogszabályok&#58;<br><br>
+                    <b>Törvények&#58;</b>
+                    <ul>
+                        <li>A Rendőrségről szóló 1994. évi XXXIV. törvény;</li>
+                        <li>A nemzetközi bűnügyi jogsegélyről szóló 1996. évi XXXVIII. törvény;</li>
+                        <li>Az Európai Unió bűnüldözési információs rendszere és a Nemzetközi Bűnügyi Rendőrség Szervezete keretében megvalósuló együttműködésről és információcseréről szóló 1999. évi LIV. törvény;</li>
+                        <li>A szervezett bűnözés, valamint az azzal összefüggő egyes jelenségek elleni fellépés szabályairól és az ehhez kapcsolódó törvénymódosításokról szóló 1999. évi LXXV. törvény;</li>
+                        <li>A bűnüldöző szervek nemzetközi együttműködéséről szóló 2002. évi LIV. törvény</li>
+                        <li>Az Európai Unió tagállamaival folytatott bűnügyi együttműködésről szóló 2012. évi CLXXX. törvény</li>
+                        <li>Az európai uniós csatlakozással összefüggő egyes törvénymódosításokról, törvényi rendelkezések hatályon kívül helyezéséről, valamint egyes törvényi rendelkezések megállapításáról szóló 2004. évi XXIX. törvény;</li>
+                    </ul>
                 </p>
             </div>
         </div>
