completed write up

--- a/Szervezet.html
+++ b/Szervezet.html
@@ -90,14 +90,29 @@
                     A TEK feladat- és hatáskörét érintő jogszabályok&#58;<br><br>
                     <b>Törvények&#58;</b>
                     <ul>
-                        <li>A Rendőrségről szóló 1994. évi XXXIV. törvény;</li>
-                        <li>A nemzetközi bűnügyi jogsegélyről szóló 1996. évi XXXVIII. törvény;</li>
-                        <li>Az Európai Unió bűnüldözési információs rendszere és a Nemzetközi Bűnügyi Rendőrség Szervezete keretében megvalósuló együttműködésről és információcseréről szóló 1999. évi LIV. törvény;</li>
-                        <li>A szervezett bűnözés, valamint az azzal összefüggő egyes jelenségek elleni fellépés szabályairól és az ehhez kapcsolódó törvénymódosításokról szóló 1999. évi LXXV. törvény;</li>
+                        <li>A Rendőrségről szóló 1994. évi XXXIV. törvény&#59;</li>
+                        <li>A nemzetközi bűnügyi jogsegélyről szóló 1996. évi XXXVIII. törvény&#59;</li>
+                        <li>Az Európai Unió bűnüldözési információs rendszere és a Nemzetközi Bűnügyi Rendőrség Szervezete keretében megvalósuló együttműködésről és információcseréről szóló 1999. évi LIV. törvény&#59;</li>
+                        <li>A szervezett bűnözés, valamint az azzal összefüggő egyes jelenségek elleni fellépés szabályairól és az ehhez kapcsolódó törvénymódosításokról szóló 1999. évi LXXV. törvény&#59;</li>
                         <li>A bűnüldöző szervek nemzetközi együttműködéséről szóló 2002. évi LIV. törvény</li>
                         <li>Az Európai Unió tagállamaival folytatott bűnügyi együttműködésről szóló 2012. évi CLXXX. törvény</li>
-                        <li>Az európai uniós csatlakozással összefüggő egyes törvénymódosításokról, törvényi rendelkezések hatályon kívül helyezéséről, valamint egyes törvényi rendelkezések megállapításáról szóló 2004. évi XXIX. törvény;</li>
+                        <li>Az európai uniós csatlakozással összefüggő egyes törvénymódosításokról, törvényi rendelkezések hatályon kívül helyezéséről, valamint egyes törvényi rendelkezések megállapításáról szóló 2004. évi XXIX. törvény&#59;</li>
+                    </ul><br>
+                    <b>Kormányrendeletek&#58;</b>
+                    <ul>
+                        <li>Az országgyűlési képviselőknek a rendőrség, a határőrség, a polgári védelem és a tűzoltóság működésére szolgáló területre történő belépéséről szóló 2/1993. (II. 2.) BM rendelet&#59;</li>
+                        <li>A belügyminiszter irányítása alatt álló titkos információgyűjtésre feljogosított szervek adatkezelésének egyes szabályairól szóló 21/1996. (VIII. 31.) BM rendelet&#59;</li>
+                        <li>A különleges eszközök és módszerek engedélyezésével, igénybevételéről szóló 26/1999. (VIII. 13.) BM rendelet&#59;</li>
+                        <li>A belügyminiszter irányítása alá tartozó szervek, egyenruha-ellátásra jogosult személyi állományának ruházati és öltözködési szabályzatáról, valamint a különleges foglalkoztatási állomány ruházati-, fegyverzeti-, kényszerítőeszköz és világítástechnikai felszerelésről szóló 71/2011. (XII. 31.) BM rendelet&#59;</li>
+                        <li>A megkülönböztető és figyelmeztető jelzést adó készülékek felszerelésének és használatának szabályairól szóló 12/2007. (III. 13.) IRM rendelet&#59;</li>
+                        <li>A rendőrség szolgálati szabályzatáról szóló 30/2011. (IX. 22.) BM rendelet;</li>
+                        <li>A Rendőrségnél rendszeresíthető kényszerítő eszközök típusairól és fajtáiról szóló 32/2009. (VIII. 19.) IRM rendelet&#59;</li>
+                        <li>A rendőrség katonai nyomozó hatóságairól és a bűncselekmények katonai nyomozásáról szóló 30/2013. (VI. 28.) BM rendelet.</li>
                     </ul>
+                    <b>A TEK rendeltetése, célja, törekvései</b><br>
+                    A Terrorelhárítási Központ országos illetékességű, a belügyminiszter közvetlen irányítása alatt működő önálló szervezet, mely önálló költségvetéssel rendelkezik, vezetőjét a miniszterelnök nevezi ki. A TEK megalapításával központosításra és átvételre kerülnek a korábban a polgári titkosszolgálatoknál és rendvédelmi szerveknél végzett terrorelhárítási feladatok, valamint nemzeti szinten kizárólagos jogkörrel látja el a terrorizmus elleni küzdelem koordinációját, elemzését, értékelését.<br>
+                    <b>Főbb feladatai</b>
+                    A Terrorelhárítási Központ végrehajtja a terrorcselekmény és ahhoz kapcsolódó más bűncselekmények felderítését, megelőzését, megszakítását. Szervezi, koordinálja a terrorcselekmények elhárítását végző szervek tevékenységét, elemzi és értékeli a Magyarország terrorfenyegetettségének helyzetét. Ellátja a miniszterelnök, a külpolitikáért felelős miniszter és a legfőbb ügyész védelmét. A belföldi vagy nemzetközi vonatkozású terrorcselekmény és az azokhoz kapcsolódó más bűncselekmények vonatkozásában kapcsolatot tart és együttműködik más államok terrorelhárításban érintett szerveivel. A miniszter kijelölése esetén képviseli a Magyarország a terrorizmussal kapcsolatos nemzetközi fórumokon, egyeztetéseken. Ellátja a kritikus infrastruktúrák védelmét, kidolgozza a biztonsági intézkedési terveket. A rendvédelmi szervek felkérésére elfogja a bűncselekmények elkövetésével gyanúsítható fegyveres vagy felfegyverzett, ön- és közveszélyes személyeket. Felkérésre indokolt esetben végrehajthatja a kiadatási és átadási letartóztatásban lévő kiemelten veszélyes személyek államhatárig vagy külföldről Magyarországra történő kísérését.
                 </p>
             </div>
         </div>
