--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
                     </div>
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-6 image-top">
-                    <div align="right" id="belugyialapokdiv">
+                    <div class="text-right" id="belugyialapokdiv">
                         <a href="belugyialapok.html">
                             <img src="BA_BBA logo.jpg" class="image-right">
                         </a>
                         <br>
                         <br>
                     </div>
-                    <div align="right">
+                    <div class="text-right">
                         <a href="eu.html">
                             <img src="euflag.jpg" class="image-right" height="150px">
                         </a>
