--- a/Szervezet.html
+++ b/Szervezet.html
@@ -3,15 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="keywords" content="Terrorelhárítási Központ, Swat, Terror, Police">
-        <title>Terrorelhárítási Központ</title>
+        <title>Terrorelhárítási Központ - Szervezet</title>
         <link rel="icon" type="image/x-icon" href="favicon.ico">
-        <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <!-- My stylesheet -->
         <link rel="stylesheet" href="TEK.css">
-        <!-- jQuery library -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js" defer></script>
-        <!-- Latest compiled JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" defer></script>
         <script src="Szervezet.js" defer></script>
     </head>
@@ -78,50 +74,49 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-12">
-                    <div class="main-text">
-                        <p>
-                            <b>Irányító szerv&#58;</b><br><br>
-                            <b>Belügyminisztérium</b><br>
-                            Székhelye&#58; 1051 Budapest, József Attila u. 2-4.<br>
-                            Postai címe&#58; 1903 Budapest Pf.&#58; 314.<br>
-                            Telefon&#58; +36-1-441-10-00<br>
-                            Telefax&#58; +36-1-441-14-37<br>
-                            Honlap&#58; www.bm.gov.hu&#59; www.kormany.hu/belugyminiszterium<br>
-                            E-mail&#58; ugyfelszolgalat@bm.gov.hu<br><br>
-                            <b>
-                                <u class="nagyob-text">TEVÉKENYSÉG, MŰKÖDÉS&#58;</u><br><br>
-                                A TEK-re vonatkozó jogszabályok<br><br>
-                                A TEK feladatköre&#58;<br>
-                            </b>
-                            A TEK feladat- és hatáskörét érintő jogszabályok&#58;<br><br>
-                            <b>Törvények&#58;</b>
-                            <ul>
-                                <li>A Rendőrségről szóló 1994. évi XXXIV. törvény&#59;</li>
-                                <li>A nemzetközi bűnügyi jogsegélyről szóló 1996. évi XXXVIII. törvény&#59;</li>
-                                <li>Az Európai Unió bűnüldözési információs rendszere és a Nemzetközi Bűnügyi Rendőrség Szervezete keretében megvalósuló együttműködésről és információcseréről szóló 1999. évi LIV. törvény&#59;</li>
-                                <li>A szervezett bűnözés, valamint az azzal összefüggő egyes jelenségek elleni fellépés szabályairól és az ehhez kapcsolódó törvénymódosításokról szóló 1999. évi LXXV. törvény&#59;</li>
-                                <li>A bűnüldöző szervek nemzetközi együttműködéséről szóló 2002. évi LIV. törvény</li>
-                                <li>Az Európai Unió tagállamaival folytatott bűnügyi együttműködésről szóló 2012. évi CLXXX. törvény</li>
-                                <li>Az európai uniós csatlakozással összefüggő egyes törvénymódosításokról, törvényi rendelkezések hatályon kívül helyezéséről, valamint egyes törvényi rendelkezések megállapításáról szóló 2004. évi XXIX. törvény&#59;</li>
-                            </ul><br>
-                            <b>Kormányrendeletek&#58;</b>
-                            <ul>
-                                <li>Az országgyűlési képviselőknek a rendőrség, a határőrség, a polgári védelem és a tűzoltóság működésére szolgáló területre történő belépéséről szóló 2/1993. (II. 2.) BM rendelet&#59;</li>
-                                <li>A belügyminiszter irányítása alatt álló titkos információgyűjtésre feljogosított szervek adatkezelésének egyes szabályairól szóló 21/1996. (VIII. 31.) BM rendelet&#59;</li>
-                                <li>A különleges eszközök és módszerek engedélyezésével, igénybevételéről szóló 26/1999. (VIII. 13.) BM rendelet&#59;</li>
-                                <li>A belügyminiszter irányítása alá tartozó szervek, egyenruha-ellátásra jogosult személyi állományának ruházati és öltözködési szabályzatáról, valamint a különleges foglalkoztatási állomány ruházati-, fegyverzeti-, kényszerítőeszköz és világítástechnikai felszerelésről szóló 71/2011. (XII. 31.) BM rendelet&#59;</li>
-                                <li>A megkülönböztető és figyelmeztető jelzést adó készülékek felszerelésének és használatának szabályairól szóló 12/2007. (III. 13.) IRM rendelet&#59;</li>
-                                <li>A rendőrség szolgálati szabályzatáról szóló 30/2011. (IX. 22.) BM rendelet;</li>
-                                <li>A Rendőrségnél rendszeresíthető kényszerítő eszközök típusairól és fajtáiról szóló 32/2009. (VIII. 19.) IRM rendelet&#59;</li>
-                                <li>A rendőrség katonai nyomozó hatóságairól és a bűncselekmények katonai nyomozásáról szóló 30/2013. (VI. 28.) BM rendelet.</li>
-                            </ul>
-                            <b>A TEK rendeltetése, célja, törekvései</b><br>
-                            A Terrorelhárítási Központ országos illetékességű, a belügyminiszter közvetlen irányítása alatt működő önálló szervezet, mely önálló költségvetéssel rendelkezik, vezetőjét a miniszterelnök nevezi ki. A TEK megalapításával központosításra és átvételre kerülnek a korábban a polgári titkosszolgálatoknál és rendvédelmi szerveknél végzett terrorelhárítási feladatok, valamint nemzeti szinten kizárólagos jogkörrel látja el a terrorizmus elleni küzdelem koordinációját, elemzését, értékelését.<br>
-                            <b>Főbb feladatai</b>
-                            A Terrorelhárítási Központ végrehajtja a terrorcselekmény és ahhoz kapcsolódó más bűncselekmények felderítését, megelőzését, megszakítását. Szervezi, koordinálja a terrorcselekmények elhárítását végző szervek tevékenységét, elemzi és értékeli a Magyarország terrorfenyegetettségének helyzetét. Ellátja a miniszterelnök, a külpolitikáért felelős miniszter és a legfőbb ügyész védelmét. A belföldi vagy nemzetközi vonatkozású terrorcselekmény és az azokhoz kapcsolódó más bűncselekmények vonatkozásában kapcsolatot tart és együttműködik más államok terrorelhárításban érintett szerveivel. A miniszter kijelölése esetén képviseli a Magyarország a terrorizmussal kapcsolatos nemzetközi fórumokon, egyeztetéseken. Ellátja a kritikus infrastruktúrák védelmét, kidolgozza a biztonsági intézkedési terveket. A rendvédelmi szervek felkérésére elfogja a bűncselekmények elkövetésével gyanúsítható fegyveres vagy felfegyverzett, ön- és közveszélyes személyeket. Felkérésre indokolt esetben végrehajthatja a kiadatási és átadási letartóztatásban lévő kiemelten veszélyes személyek államhatárig vagy külföldről Magyarországra történő kísérését.
-                        </p>
-                    </div>
+                <div class="col-xs-12 col-sm-12 col-md-12 main-text">
+                
+                    <p>
+                        <b>Irányító szerv&#58;</b><br><br>
+                        <b>Belügyminisztérium</b><br>
+                        Székhelye&#58; 1051 Budapest, József Attila u. 2-4.<br>
+                        Postai címe&#58; 1903 Budapest Pf.&#58; 314.<br>
+                        Telefon&#58; +36-1-441-10-00<br>
+                        Telefax&#58; +36-1-441-14-37<br>
+                        Honlap&#58; www.bm.gov.hu&#59; www.kormany.hu/belugyminiszterium<br>
+                        E-mail&#58; ugyfelszolgalat@bm.gov.hu<br><br>
+                        <b>
+                            <u class="nagyob-text">TEVÉKENYSÉG, MŰKÖDÉS&#58;</u><br><br>
+                            A TEK-re vonatkozó jogszabályok<br><br>
+                            A TEK feladatköre&#58;<br>
+                        </b>
+                        A TEK feladat- és hatáskörét érintő jogszabályok&#58;<br><br>
+                        <b>Törvények&#58;</b>
+                        <ul>
+                            <li>A Rendőrségről szóló 1994. évi XXXIV. törvény&#59;</li>
+                            <li>A nemzetközi bűnügyi jogsegélyről szóló 1996. évi XXXVIII. törvény&#59;</li>
+                            <li>Az Európai Unió bűnüldözési információs rendszere és a Nemzetközi Bűnügyi Rendőrség Szervezete keretében megvalósuló együttműködésről és információcseréről szóló 1999. évi LIV. törvény&#59;</li>
+                            <li>A szervezett bűnözés, valamint az azzal összefüggő egyes jelenségek elleni fellépés szabályairól és az ehhez kapcsolódó törvénymódosításokról szóló 1999. évi LXXV. törvény&#59;</li>
+                            <li>A bűnüldöző szervek nemzetközi együttműködéséről szóló 2002. évi LIV. törvény</li>
+                            <li>Az Európai Unió tagállamaival folytatott bűnügyi együttműködésről szóló 2012. évi CLXXX. törvény</li>
+                            <li>Az európai uniós csatlakozással összefüggő egyes törvénymódosításokról, törvényi rendelkezések hatályon kívül helyezéséről, valamint egyes törvényi rendelkezések megállapításáról szóló 2004. évi XXIX. törvény&#59;</li>
+                        </ul><br>
+                        <b>Kormányrendeletek&#58;</b>
+                        <ul>
+                            <li>Az országgyűlési képviselőknek a rendőrség, a határőrség, a polgári védelem és a tűzoltóság működésére szolgáló területre történő belépéséről szóló 2/1993. (II. 2.) BM rendelet&#59;</li>
+                            <li>A belügyminiszter irányítása alatt álló titkos információgyűjtésre feljogosított szervek adatkezelésének egyes szabályairól szóló 21/1996. (VIII. 31.) BM rendelet&#59;</li>
+                            <li>A különleges eszközök és módszerek engedélyezésével, igénybevételéről szóló 26/1999. (VIII. 13.) BM rendelet&#59;</li>
+                            <li>A belügyminiszter irányítása alá tartozó szervek, egyenruha-ellátásra jogosult személyi állományának ruházati és öltözködési szabályzatáról, valamint a különleges foglalkoztatási állomány ruházati-, fegyverzeti-, kényszerítőeszköz és világítástechnikai felszerelésről szóló 71/2011. (XII. 31.) BM rendelet&#59;</li>
+                            <li>A megkülönböztető és figyelmeztető jelzést adó készülékek felszerelésének és használatának szabályairól szóló 12/2007. (III. 13.) IRM rendelet&#59;</li>
+                            <li>A rendőrség szolgálati szabályzatáról szóló 30/2011. (IX. 22.) BM rendelet;</li>
+                            <li>A Rendőrségnél rendszeresíthető kényszerítő eszközök típusairól és fajtáiról szóló 32/2009. (VIII. 19.) IRM rendelet&#59;</li>
+                            <li>A rendőrség katonai nyomozó hatóságairól és a bűncselekmények katonai nyomozásáról szóló 30/2013. (VI. 28.) BM rendelet.</li>
+                        </ul>
+                        <b>A TEK rendeltetése, célja, törekvései</b><br>
+                        A Terrorelhárítási Központ országos illetékességű, a belügyminiszter közvetlen irányítása alatt működő önálló szervezet, mely önálló költségvetéssel rendelkezik, vezetőjét a miniszterelnök nevezi ki. A TEK megalapításával központosításra és átvételre kerülnek a korábban a polgári titkosszolgálatoknál és rendvédelmi szerveknél végzett terrorelhárítási feladatok, valamint nemzeti szinten kizárólagos jogkörrel látja el a terrorizmus elleni küzdelem koordinációját, elemzését, értékelését.<br>
+                        <b>Főbb feladatai</b>
+                        A Terrorelhárítási Központ végrehajtja a terrorcselekmény és ahhoz kapcsolódó más bűncselekmények felderítését, megelőzését, megszakítását. Szervezi, koordinálja a terrorcselekmények elhárítását végző szervek tevékenységét, elemzi és értékeli a Magyarország terrorfenyegetettségének helyzetét. Ellátja a miniszterelnök, a külpolitikáért felelős miniszter és a legfőbb ügyész védelmét. A belföldi vagy nemzetközi vonatkozású terrorcselekmény és az azokhoz kapcsolódó más bűncselekmények vonatkozásában kapcsolatot tart és együttműködik más államok terrorelhárításban érintett szerveivel. A miniszter kijelölése esetén képviseli a Magyarország a terrorizmussal kapcsolatos nemzetközi fórumokon, egyeztetéseken. Ellátja a kritikus infrastruktúrák védelmét, kidolgozza a biztonsági intézkedési terveket. A rendvédelmi szervek felkérésére elfogja a bűncselekmények elkövetésével gyanúsítható fegyveres vagy felfegyverzett, ön- és közveszélyes személyeket. Felkérésre indokolt esetben végrehajthatja a kiadatási és átadási letartóztatásban lévő kiemelten veszélyes személyek államhatárig vagy külföldről Magyarországra történő kísérését.
+                    </p>
                 </div>
             </div>
             <hr>
@@ -151,9 +146,9 @@
                             </td>
                         </tr>
                     </table>
+                    <hr>
                 </div>
             </div>
-            <hr>
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12">
                     <p class="text-center">&copy; 2010-<span id="year"></span> TEK</p>
