Gazdálkodás completed + few minor fixes elsewhere

--- a/Szervezet.html
+++ b/Szervezet.html
@@ -75,7 +75,6 @@
             </div>
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 main-text">
-                
                     <p>
                         <b>Irányító szerv&#58;</b><br><br>
                         <b>Belügyminisztérium</b><br>
@@ -111,15 +110,15 @@
                             <li>A rendőrség szolgálati szabályzatáról szóló 30/2011. (IX. 22.) BM rendelet;</li>
                             <li>A Rendőrségnél rendszeresíthető kényszerítő eszközök típusairól és fajtáiról szóló 32/2009. (VIII. 19.) IRM rendelet&#59;</li>
                             <li>A rendőrség katonai nyomozó hatóságairól és a bűncselekmények katonai nyomozásáról szóló 30/2013. (VI. 28.) BM rendelet.</li>
-                        </ul>
+                        </ul><br>
                         <b>A TEK rendeltetése, célja, törekvései</b><br>
-                        A Terrorelhárítási Központ országos illetékességű, a belügyminiszter közvetlen irányítása alatt működő önálló szervezet, mely önálló költségvetéssel rendelkezik, vezetőjét a miniszterelnök nevezi ki. A TEK megalapításával központosításra és átvételre kerülnek a korábban a polgári titkosszolgálatoknál és rendvédelmi szerveknél végzett terrorelhárítási feladatok, valamint nemzeti szinten kizárólagos jogkörrel látja el a terrorizmus elleni küzdelem koordinációját, elemzését, értékelését.<br>
-                        <b>Főbb feladatai</b>
-                        A Terrorelhárítási Központ végrehajtja a terrorcselekmény és ahhoz kapcsolódó más bűncselekmények felderítését, megelőzését, megszakítását. Szervezi, koordinálja a terrorcselekmények elhárítását végző szervek tevékenységét, elemzi és értékeli a Magyarország terrorfenyegetettségének helyzetét. Ellátja a miniszterelnök, a külpolitikáért felelős miniszter és a legfőbb ügyész védelmét. A belföldi vagy nemzetközi vonatkozású terrorcselekmény és az azokhoz kapcsolódó más bűncselekmények vonatkozásában kapcsolatot tart és együttműködik más államok terrorelhárításban érintett szerveivel. A miniszter kijelölése esetén képviseli a Magyarország a terrorizmussal kapcsolatos nemzetközi fórumokon, egyeztetéseken. Ellátja a kritikus infrastruktúrák védelmét, kidolgozza a biztonsági intézkedési terveket. A rendvédelmi szervek felkérésére elfogja a bűncselekmények elkövetésével gyanúsítható fegyveres vagy felfegyverzett, ön- és közveszélyes személyeket. Felkérésre indokolt esetben végrehajthatja a kiadatási és átadási letartóztatásban lévő kiemelten veszélyes személyek államhatárig vagy külföldről Magyarországra történő kísérését.
+                        A Terrorelhárítási Központ országos illetékességű, a belügyminiszter közvetlen irányítása alatt működő önálló szervezet, mely önálló költségvetéssel rendelkezik, vezetőjét a miniszterelnök nevezi ki. A TEK megalapításával központosításra és átvételre kerülnek a korábban a polgári titkosszolgálatoknál és rendvédelmi szerveknél végzett terrorelhárítási feladatok, valamint nemzeti szinten kizárólagos jogkörrel látja el a terrorizmus elleni küzdelem koordinációját, elemzését, értékelését.<br><br>
+                        <b>Főbb feladatai</b><br>
+                        A Terrorelhárítási Központ végrehajtja a terrorcselekmény és ahhoz kapcsolódó más bűncselekmények felderítését, megelőzését, megszakítását. Szervezi, koordinálja a terrorcselekmények elhárítását végző szervek tevékenységét, elemzi és értékeli a Magyarország terrorfenyegetettségének helyzetét. Ellátja a miniszterelnök, a külpolitikáért felelős miniszter és a legfőbb ügyész védelmét. A belföldi vagy nemzetközi vonatkozású terrorcselekmény és az azokhoz kapcsolódó más bűncselekmények vonatkozásában kapcsolatot tart és együttműködik más államok terrorelhárításban érintett szerveivel. A miniszter kijelölése esetén képviseli a Magyarország a terrorizmussal kapcsolatos nemzetközi fórumokon, egyeztetéseken. Ellátja a kritikus infrastruktúrák védelmét, kidolgozza a biztonsági intézkedési terveket. A rendvédelmi szervek felkérésére elfogja a bűncselekmények elkövetésével gyanúsítható fegyveres vagy felfegyverzett, ön- és közveszélyes személyeket. Felkérésre indokolt esetben végrehajthatja a kiadatási és átadási letartóztatásban lévő kiemelten veszélyes személyek államhatárig vagy külföldről Magyarországra történő kísérését.<br>
                     </p>
+                    <hr>
                 </div>
             </div>
-            <hr>
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 text-center">
                     <table class="img-table">
